# rust-edsdk

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs  commentBindings.md  commentEDSDK.md
.github/workflows/: rust.yml
edsdk/: Cargo.toml  build.rs
edsdk/native/: EDSDK.h
edsdk/src/: lib.rs  link.rs  sdk.rs
edsdk/tests/: test.rs
macro_lib/: Cargo.toml
macro_lib/src/: lib.rs
native/: EDSDKTypes.h
src/: lib.rs  link.rs  main.rs  sdk.rs
tests/: camera.rs  test.rs
